--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>jackson-core</artifactId>
             <version>2.9.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
